syntax = "proto3";

option csharp_namespace = "GrpcBase.Common";

package common;

service Broadcaster{
  rpc RespondToRequest (BroadcastRequest) returns (BroadcastReply);
}

message BroadcastRequest{
  string content = 1;
}

message BroadcastReply{
  string content = 1;
}

service Authenticator{
  rpc Authenticate (AuthRequest) returns (AuthReply);
}
message AuthRequest{
  string content = 1;
  string user = 2;
}

message AuthReply{
  string token = 1;
}